# all-cabal-tool

./: .dockerignore  .gitignore  .travis.yml  ChangeLog.md  Dockerfile  LICENSE  README.md  all-cabal-tool.cabal  flake.nix  justfile  run-inner.sh  run.sh  shell-stack.nix  stack.yaml
.github/workflows/: ci.yml  update-deps.yml
app/: Main.hs
dist-newstyle/cache/: config
nix/scripts/: gen-packages.sh  sync-lts.sh  update-deps.sh
src/Stackage/Package/: Git.hs  Hashes.hs  IndexConduit.hs  Locations.hs  Metadata.hs  Update.hs
src/Stackage/Package/Git/: Object.hs  Repository.hs  Types.hs  WorkTree.hs
src/Stackage/Package/Metadata/: Types.hs  Update.hs
test/: Main.hs
