name:                all-cabal-tool
version:             0.1.0.0
synopsis:            Update the various all-cabal-* repos
description:         Please see README.md
homepage:            https://github.com/commercialhaskell/all-cabal-tool#readme
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Distribution
build-type:          Simple
extra-source-files:  README.md ChangeLog.md
cabal-version:       >=1.10

executable all-cabal-tool
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , classy-prelude-conduit
                     , conduit-extra
                     , cryptonite
                     , cryptonite-conduit
                     , directory
                     , filepath
                     , http-client
                     , http-conduit
                     , http-types
                     , memory
                     , tar
                     , zlib
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/commercialhaskell/all-cabal-tool
