name:                all-cabal-tool
version:             0.1.0.0
synopsis:            Update the various all-cabal-* repos
description:         Please see README.md
homepage:            https://github.com/commercialhaskell/all-cabal-tool#readme
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Distribution
build-type:          Simple
extra-source-files:  README.md ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Stackage.Package.Hashes
                     , Stackage.Package.IndexConduit
                     , Stackage.Package.Locations
                     , Stackage.Package.Metadata
                     , Stackage.Package.Metadata.Update
                     , Stackage.Package.Update
  build-depends:       base
                     , base16-bytestring
                     , bytestring
                     , aeson
                     , Cabal
                     , classy-prelude-conduit
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , containers
                     , cryptonite
                     , cryptonite-conduit
                     , directory
                     , enclosed-exceptions
                     , filepath
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-types
                     , memory
                     , mtl
                     , pretty
                     , resourcet
                     , tar
                     , temporary
                     , transformers
                     , text
                     , yaml
                     , zlib
  default-language:    Haskell2010

executable all-cabal-tool
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , bytestring
                     , aeson
                     , all-cabal-tool
                     , classy-prelude-conduit
                     , conduit-extra
                     , cryptonite
                     , cryptonite-conduit
                     , directory
                     , filepath
                     , http-client
                     , http-conduit
                     , http-types
                     , memory
                     , tar
                     , zlib
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/commercialhaskell/all-cabal-tool
