name:                all-cabal-tool
version:             0.1.0.0
synopsis:            Update the various all-cabal-* repos
description:         Please see README.md
homepage:            https://github.com/commercialhaskell/all-cabal-tool#readme
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Distribution
build-type:          Simple
extra-source-files:  README.md ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Stackage.Package.Hashes
                     , Stackage.Package.IndexConduit
                     , Stackage.Package.Locations
                     , Stackage.Package.Metadata
                     , Stackage.Package.Metadata.Types
                     , Stackage.Package.Update
  build-depends:       base
                     , bytestring
                     , aeson
                     , Cabal
                     , classy-prelude-conduit
                     , conduit
                     , conduit-extra
                     , containers
                     , cryptonite
                     , cryptonite-conduit
                     , directory
                     , enclosed-exceptions
                     , filepath
                     , hit
                     , hourglass
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-types
                     , memory
                     , pretty
                     , process
                     , resourcet
                     , system-filepath
                     , tar
                     , temporary
                     , text
                     , utf8-string
                     , yaml
  default-language:    Haskell2010
  ghc-options:         -Wall

executable all-cabal-tool
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , bytestring
                     , aeson
                     , all-cabal-tool
                     , amazonka
                     , amazonka-core
                     , amazonka-s3
                     , classy-prelude-conduit
                     , conduit-extra
                     , directory
                     , http-client
                     , http-conduit
                     , http-types
                     , lens
                     , optparse-applicative
                     , temporary
                     , zlib
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N


source-repository head
  type:     git
  location: https://github.com/commercialhaskell/all-cabal-tool
